// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedTitle component should apply custom image props 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Object {
      "height": 600,
      "width": 750,
    }
  }
>
  <ImageBackground
    resizeMode="contain"
    source={
      Object {
        "url": "http://google.com",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "height": 600,
        "justifyContent": "center",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 40,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 45,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
          }
        }
      />
      <Themed.Text
        h4={true}
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="featuredTileTitle"
      />
    </View>
  </ImageBackground>
</TouchableOpacity>
`;

exports[`FeaturedTitle component should apply values from theme 1`] = `
<View
  accessible={true}
  clickable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 600,
      "opacity": 1,
      "width": 750,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "alignItems": "center",
        "height": 600,
        "justifyContent": "center",
        "width": 750,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "url": "http://google.com",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 600,
            "width": 750,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 40,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 45,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
          }
        }
      />
      <Text
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "fontSize": 27.5,
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="featuredTileTitle"
        theme={
          Object {
            "FeaturedTile": Object {
              "title": "I am featured",
            },
            "colors": Object {
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "primary": "#007aff",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          }
        }
      >
        I am featured
      </Text>
    </View>
  </View>
</View>
`;

exports[`FeaturedTitle component should render component in caption 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Object {
      "height": 600,
      "width": 750,
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "url": "http://google.com",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "height": 600,
        "justifyContent": "center",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 40,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 45,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
          }
        }
      />
      <Themed.Text
        h4={true}
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="featuredTileTitle"
      />
      <Themed.Avatar
        source={
          Object {
            "uri": "http://google.com",
          }
        }
      />
    </View>
  </ImageBackground>
</TouchableOpacity>
`;

exports[`FeaturedTitle component should render string in caption 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Object {
      "height": 600,
      "width": 750,
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "url": "http://google.com",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "height": 600,
        "justifyContent": "center",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 40,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 45,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
          }
        }
      />
      <Themed.Text
        h4={true}
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="featuredTileTitle"
      />
      <Themed.Text
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
      >
        Caption text
      </Themed.Text>
    </View>
  </ImageBackground>
</TouchableOpacity>
`;

exports[`FeaturedTitle component should render with Icon 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Object {
      "height": 70,
      "width": 750,
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "url": "http://google.com",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "bottom": 0,
          "flex": 1,
          "height": 70,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 40,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 45,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "height": 70,
            "justifyContent": "center",
          }
        }
      >
        <Themed.Icon
          name="play-circle"
          type="font-awesome"
        />
      </View>
      <Themed.Text
        h4={true}
        style={
          Object {
            "backgroundColor": "yellow",
            "color": "#ffffff",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="featuredTileTitle"
      />
    </View>
  </ImageBackground>
</TouchableOpacity>
`;

exports[`FeaturedTitle component should render with width and height 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  height={20}
  style={
    Object {
      "height": 20,
      "width": 34,
    }
  }
  width={34}
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "url": "http://google.com",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "height": 20,
        "justifyContent": "center",
        "width": 34,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 40,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 45,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
          }
        }
      />
      <Themed.Text
        h4={true}
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="featuredTileTitle"
      />
    </View>
  </ImageBackground>
</TouchableOpacity>
`;

exports[`FeaturedTitle component should render without issues 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Object {
      "height": 600,
      "width": 750,
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "url": "http://google.com",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "height": 600,
        "justifyContent": "center",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "paddingBottom": 40,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 45,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
          }
        }
      />
      <Themed.Text
        h4={true}
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="featuredTileTitle"
      />
    </View>
  </ImageBackground>
</TouchableOpacity>
`;
